additional cleanup. made "Contractor Type" required. hid EIN field from ManageCompanies. added help text and fixed toasters on CompanyUsers. Files modified - [CompanyUsers,CompanyMunicipalities,ManageCompanies,CompanyDetails]

--- a/src/main/webapp/pages/CompanyDetails/CompanyDetails.html
+++ b/src/main/webapp/pages/CompanyDetails/CompanyDetails.html
@@ -79,7 +79,7 @@
                                                     widget="select" maxchars="255" placeholder="Select value" validationmessage="Business Classification is required" dataset="Individual,LLC,LLP,Corporation,Partnership,Professional Association, Other"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="4" name="gridcolumn15">
-                                                    <wm-form-field name="contractorTypes" displayname="Contractor Type" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" readonly="false" required="false"
+                                                    <wm-form-field name="contractorTypes" displayname="Contractor Type" show="true" primary-key="false" generator="assigned" key="contractorTypes" type="list" is-related="true" readonly="false" required="true"
                                                     widget="select" placeholder="Select value" displayexpression="contractorType" orderby="contractorType:asc"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
