--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -23,11 +23,12 @@
                 <wm-gridrow name="gridrow10">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn25">
                         <wm-tabs name="tabs1">
-                            <wm-tabpane name="tabpane1" title="Company Users">
+                            <wm-tabpane name="tabpane1" title="Company Employees">
                                 <wm-layoutgrid name="layoutgrid2_1">
                                     <wm-gridrow name="gridrow20">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn45">
-                                            <wm-label padding="unset 0.5em" name="label32" caption="Company Users are employees of your company. When a user selects your company on a new form, they have the option of sharing their submitted form with your company users."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label32" caption="Company Employees are granted access to the &quot;My Company&quot; dashboard for your company, where they can view the Company Profile, Company Forms, and Company Projects pages."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label33" caption="When a CivicXpress user selects your company on a new form, they have the option of sharing their submitted form with your company employees."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow5">
@@ -38,7 +39,8 @@
                                                 <wm-grid-column binding="users.email" caption="Email Address" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
                                                 <wm-grid-column binding="users.phoneNumber" caption="Phone Number" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
                                                 <wm-grid-column binding="joiningDate" caption="Date Added" type="date" generator="assigned" readonly="true" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="date" show="true"></wm-grid-column>
-                                                <wm-grid-action key="customButton" display-name="Add User" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add User" action="Widgets.dialogAddUser.open()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                <wm-grid-action key="customButton" display-name="Add Employee" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Employee" action="Widgets.dialogAddUser.open()" shortcutkey=""
+                                                disabled="false"></wm-grid-action>
                                                 <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-perm-contact-calendar" title="View Profile" action="Widgets.dialogUserProfile.open()"
                                                 disabled="false"></wm-grid-row-action>
                                                 <wm-grid-row-action key="customRow1" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Remove" action="customRow1Action($event)" disabled="false"></wm-grid-row-action>
@@ -51,8 +53,8 @@
                                 <wm-layoutgrid name="layoutgrid2_1">
                                     <wm-gridrow name="gridrow21">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn46">
-                                            <wm-label padding="unset 0.5em" name="label30" caption="Company Admins are Company Users who have been granted access to the content on the &quot;My Company&quot; dashboard, where they can control your company profile information, view company forms, and manage company users and municipality applications."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label31" caption="Company Admins must also have the Company User role." fontweight="bold"></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label30" caption="Company Admins are Company Employees who have been given additional access to the &quot;My Company&quot; dashboard, where they can control your company profile information, manage company users, and manage municipality applications."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label31" caption="Company Admins must also have the Company Employee role." fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow5">
@@ -81,7 +83,7 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="viewAdd">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Add Company User" iconclass="wi wi-person-add" name="dialogAddUser">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Add Company Employee" iconclass="wi wi-person-add" name="dialogAddUser">
             <wm-dialogactions name="dialogactionsAdd">
                 <wm-button class="btn-primary" caption="Add User" name="buttonAdd" on-click="Variables.AddUsersToCompany.invoke()" iconclass="wi wi-plus" disabled="bind:!Widgets.searchUser.datavalue"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button7" iconclass="wi wi-cancel"></wm-button>
@@ -245,6 +247,6 @@
         </wm-dialog>
     </wm-view>
     <wm-view class="dialog-view" name="viewDeleteAdminConfrim">
-        <wm-confirmdialog name="confirmdialogDeleteAdminConfrim" message="This action will also revoke Company Admin privileges. Would you like to proceed?" on-ok="confirmdialogDeleteAdminConfrimOk($event, $scope)" iconclass="wi wi-trash" title="Remove User"></wm-confirmdialog>
+        <wm-confirmdialog name="confirmdialogDeleteAdminConfrim" message="This action will also revoke Company Admin privileges. Would you like to proceed?" on-ok="confirmdialogDeleteAdminConfrimOk($event, $scope)" iconclass="wi wi-trash" title="Remove Employee"></wm-confirmdialog>
     </wm-view>
 </wm-page>
