exploring options for marking fees as paid after credit card is established or paid Files modified - [MyCart,PaymentService]

--- a/src/main/webapp/pages/MyCart/MyCart.html
+++ b/src/main/webapp/pages/MyCart/MyCart.html
@@ -31,6 +31,11 @@
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
+                                <wm-html name="html2">
+                                    <form action="https://www.wavemakeronline.com/run-700gxljbr3/CivicXpress/services/payment/chargeCreditCard" method="POST">
+                                        <!--<script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="pk_test_XPwevpSch24R4UhQqbH3bGPB" data-amount="999" data-name="TekDog Inc." data-description="Widget" data-locale="auto" data-image="https://s3.amazonaws.com/stripe-uploads/acct_1ASmehESexevkNnpmerchant-icon-1497016245641-CX200.png"></script>-->
+                                    </form>
+                                </wm-html>
                             </wm-wizardstep>
                             <wm-wizardstep name="wizardstep2" title="Checkout" iconclass="wi wi-attach-money" on-load="wizardstep2Load($scope, stepIndex)">
                                 <wm-layoutgrid name="layoutgrid2">
